--- a/Startup.css
+++ b/Startup.css
@@ -71,7 +71,7 @@ header.startup h1 {
 	color: #E13539
 }
 
-.btn {
+.clear {
   font-weight: 700;
   /*text-transform: uppercase;*/
   border-radius: 300px;
